# lazy_k_haskell

./: CHANGELOG.md  LICENSE  README.md  lazy-k-haskell.cabal
.github/workflows/: haskell.yml
app/: lazy.hs
src/: LazyKCore.hs
