cabal-version:      2.4
name:               lazy-k-haskell
version:            0.1.0.0
synopsis:
    Lazy K interpreter and tools for lambda calculus written in Haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/vert2air/lazy_k_haskell

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             vert2air
maintainer:         vert2air@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable lazy-k-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        lazy-k-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lazy-k-haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
