cabal-version:      3.0
name:               lazy-k-haskell
version:            0.1.0.0
synopsis:
    Lazy K interpreter and tools for lambda calculus written in Haskell

-- description:
homepage:           https://github.com/vert2air/lazy_k_haskell
license:            MIT
license-file:       LICENSE
author:             vert2air
maintainer:         vert2air@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable lazy-k-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        lazy-k-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lazy-k-haskell-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        lazy-k-haskell
